--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div id="sim-galton" class="sim-panel glass-panel" style="display:block; padding:20px;">
                 <div class="sim-header" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
                     <div>
-                        <h2 style="margin:0; background:linear-gradient(45deg, #4cc9f0, #4361ee); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">Galton Board</h2>
+                        <h2 style="margin:0; background:linear-gradient(45deg, #4cc9f0, #4361ee); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;">Galton Board</h2>
                         <p style="color:#aaa; font-size:0.9rem; margin-top:5px;" data-i18n="sim_galton_desc_short">Demonstrating Central Limit Theorem via Normal Distribution</p>
                     </div>
                 </div>
@@ -519,7 +519,7 @@
             <!-- ──── MONTY HALL ──── -->
             <div id="sim-monty" class="sim-panel glass-panel" style="display:none; padding:20px;">
                 <div class="sim-header" style="margin-bottom:15px;">
-                     <h2 style="margin:0; background:linear-gradient(45deg, #f72585, #7209b7); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">Monty Hall Problem</h2>
+                     <h2 style="margin:0; background:linear-gradient(45deg, #f72585, #7209b7); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;">Monty Hall Problem</h2>
                      <p style="color:#aaa; font-size:0.9rem;" data-i18n="sim_monty_desc_short">A probability puzzle based on a game show</p>
                 </div>
 
@@ -584,7 +584,7 @@
             <!-- ──── BUFFON'S NEEDLE ──── -->
             <div id="sim-buffon" class="sim-panel glass-panel" style="display:none; padding:20px;">
                 <div class="sim-header" style="margin-bottom:15px;">
-                     <h2 style="margin:0; background:linear-gradient(45deg, #ff00cc, #333399); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">Buffon's Needle</h2>
+                     <h2 style="margin:0; background:linear-gradient(45deg, #ff00cc, #333399); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;">Buffon's Needle</h2>
                      <p style="color:#aaa; font-size:0.9rem;">Estimating Pi (π) by dropping needles</p>
                 </div>
 
