--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
 
             <div class="lang-switcher">
-                <button class="lang-btn active" onclick="setLanguage('hy')">ՀՅ</button>
-                <button class="lang-btn" onclick="setLanguage('en')">EN</button>
+                <button class="lang-btn" onclick="setLanguage('hy')">ՀՅ</button>
+                <button class="lang-btn active" onclick="setLanguage('en')">EN</button>
                 <button class="lang-btn" onclick="setLanguage('ru')">RU</button>
             </div>
 
