--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <!-- AI Section -->
             <div style="margin-top:50px; padding-top:30px; border-top:1px solid rgba(255,255,255,0.1);">
                 <h2 style="margin-bottom:20px;">
-                    <i class="fas fa-robot" style="color:var(--accent-blue)"></i> <span data-i18n="section_ai_gen">AI
+                    <i class="fas fa-robot" style="color:var(--neon-purple)"></i> <span data-i18n="section_ai_gen">AI
                         Problem Generator</span>
                 </h2>
                 <div class="ai-controls">
@@ -287,7 +287,7 @@
         <!-- ─────────────── LAB PAGE ─────────────── -->
         <section id="lab" class="page-section">
             <h1 style="margin:20px 0 30px; font-size:2.2rem;">
-                <i class="fas fa-flask" style="color:var(--accent-blue)"></i>
+                <i class="fas fa-flask" style="color:var(--neon-purple)"></i>
                 <span data-i18n="section_lab">The Lab — Calculator & Graphs</span>
             </h1>
 
@@ -359,7 +359,7 @@
                         <button class="key op" onclick="addToCalc('e')">e</button>
 
                         <button class="key op" onclick="addToCalc('∪')" style="color:var(--accent-pink)">∪</button>
-                        <button class="key op" onclick="addToCalc('∩')" style="color:var(--accent-blue)">∩</button>
+                        <button class="key op" onclick="addToCalc('∩')" style="color:var(--neon-purple)">∩</button>
                         <button class="key op" onclick="addToCalc(',')">,</button>
                         <button class="key enter" onclick="calculateResult()">=</button>
                     </div>
@@ -395,7 +395,7 @@
                     <div id="calc-formula-container"
                         style="display:none; margin-top:20px; border-top:1px solid rgba(255,255,255,0.1); padding-top:15px;">
                         <h3 data-i18n="calc_mode_formula"
-                            style="font-size:1rem; color:var(--accent-blue); margin-bottom:10px;">Step-by-Step Formulas
+                            style="font-size:1rem; color:var(--neon-purple); margin-bottom:10px;">Step-by-Step Formulas
                         </h3>
                         <select id="formula-select" class="ai-select" style="width:100%; margin-bottom:15px;"
                             onchange="renderFormulaInputs()">
@@ -476,7 +476,7 @@
             <div id="sim-galton" class="sim-panel glass-panel" style="display:block; padding:20px;">
                 <div class="sim-header" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
                     <div>
-                        <h2 style="margin:0; background:linear-gradient(45deg, #4cc9f0, #4361ee); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;">Galton Board</h2>
+                        <h2 style="margin:0; background:linear-gradient(45deg, #a855f7, #4361ee); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;">Galton Board</h2>
                         <p style="color:#aaa; font-size:0.9rem; margin-top:5px;" data-i18n="sim_galton_desc_short">Demonstrating Central Limit Theorem via Normal Distribution</p>
                     </div>
                 </div>
@@ -599,7 +599,7 @@
                     
                     <div class="controls-wrapper" style="flex:1; min-width:250px; display:flex; flex-direction:column; gap:15px;">
                          <div class="stats-card" style="background:rgba(255,255,255,0.05); padding:15px; border-radius:10px;">
-                            <h4 style="margin:0 0 10px; color:#4cc9f0;" data-i18n="stat_approx_results">Approximation Results</h4>
+                            <h4 style="margin:0 0 10px; color:#a855f7;" data-i18n="stat_approx_results">Approximation Results</h4>
                             <div id="buffon-stats"></div>
                         </div>
 
