--- a/index.html
+++ b/index.html
@@ -38,9 +38,19 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/simulations.css">
     <link rel="stylesheet" href="css/lab.css">
+    <link rel="stylesheet" href="css/background.css">
 </head>
 
 <body>
+
+    <!-- ═══════════════════════ BACKGROUND ANIMATION ═══════════════════════ -->
+    <div class="bg-animation-container">
+        <div class="bg-particle particle-1"></div>
+        <div class="bg-particle particle-2"></div>
+        <div class="bg-particle particle-3"></div>
+        <div class="bg-particle particle-4"></div>
+        <div class="interactive-glow" id="bg-glow"></div>
+    </div>
 
     <!-- ═══════════════════════ HEADER / NAVIGATION ═══════════════════════ -->
     <nav class="glass-nav" id="main-nav">
