--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                 <button class="filter-btn" data-filter="olympic" onclick="filterProblems('olympic', this)">
                     <i class="fas fa-trophy"></i> <span data-i18n="filter_olympic">Olympic</span>
                 </button>
+                <div style="width:2px; height:24px; background:rgba(255,255,255,0.2); margin:0 5px; display:inline-block; vertical-align:middle;"></div>
+                <button class="filter-btn" data-filter="solved" onclick="filterProblems('solved', this)">
+                    <i class="fas fa-check-double" style="color:#06d6a0;"></i> <span data-i18n="filter_solved">Solved</span>
+                </button>
             </div>
 
             <div id="problems-grid" class="grid-container">
